Fix image card focus state spacing
- occurs with lists of links, added line height to deal with problem between lines, and a bit of margin to deal with problem between links

--- a/app/assets/stylesheets/govuk_publishing_components/components/_image-card.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_image-card.scss
@@ -110,8 +110,13 @@
   margin: 0;
   list-style: none;
 
+  .gem-c-image-card__list-item {
+    margin-bottom: govuk-spacing(1);
+  }
+
   .gem-c-image-card__list-item-link {
     @extend %govuk-link;
+    line-height: 1.35em;
   }
 
   &.gem-c-image-card__list--indented {
